--- a/layout.html
+++ b/layout.html
@@ -14,21 +14,26 @@
 </head>
 
 <body>
-    <h1 class="text-uppercase font-italic text-monospace text-secondary">Hello, world!</h1>
-    <div class="bg-primary text-white h6 pb-5 m-4 text-wrap" >
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque voluptate quam ex repudiandae rem, dolore,
-        maxime reiciendis cum similique vitae possimus perferendis fuga molestias quis, animi distinctio perspiciatis
-        unde doloribus.
-    </div>
-
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-12 p-5">
-                <button class="btn btn-outline-danger">google</button>
+            <div class="col-12 col-lg-4 col-md-6 bg-warning">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt maxime eligendi odit porro labore impedit
+                sit autem mollitia quaerat rerum!
+            </div>
+        </div>
 
-                <a href="https://www.google.com/" class="btn btn-outline-success">google</a>
+        <div class="row">
+            <div class="col-12 col-lg-4 col-md-6 badge-danger">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea perferendis nemo aut voluptas quisquam est vel
+                assumenda cupiditate quaerat sit.
+            </div>
+            <div class="col-12 col-lg-8 col-md-6 badge-primary">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt maxime eligendi odit porro labore impedit
+                sit autem mollitia quaerat rerum!
+            </div>
         </div>
     </div>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
